hook template-new-file to find-file-not-found-hooks

--- a/emacs/.emacs.d/eshell/history
+++ b/emacs/.emacs.d/eshell/history
@@ -62,3 +62,10 @@ rails console
 ls
 ./hello -DABD=123
 ls
+cd ~/Downloads/
+ls
+tar zxvf OSS_C_API.tar.gz
+ls
+cd OSS_C_API/
+ls
+open doc/html/index.html
